# coding-theory

./: README.md
data-compression/: CMakeLists.txt  main.cpp
data-compression/include/: haffman.h  shannon_fano.h
data-compression/sources/: haffman.cpp  shannon_fano.cpp
input_data/: data1.txt  data2.txt  data3.txt
out_data/: data1_haffman.txt  data1_shannon_fano.txt  data2_haffman.txt  data2_shannon_fano.txt  data3_haffman.txt  data3_shannon_fano.txt
